--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         goos: [linux]
-        goarch: [amd64, arm64]
+        goarch: [amd64, arm64, darwin]
     steps:
       - uses: actions/checkout@v3
       - uses: wangyoucao577/go-release-action@v1
